--- a/Report/Intro.Rmd
+++ b/Report/Intro.Rmd
@@ -1,6 +1,6 @@
 
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = FALSE, message = FALSE, warning=FALSE}
 source(here::here("Setup/set.R"))
 ```
 
