--- a/Report/Intro.Rmd
+++ b/Report/Intro.Rmd
@@ -9,7 +9,10 @@ knitr::opts_chunk$set(echo = TRUE)
 options(rgl.useNULL=TRUE) 
 ```
 
-![](https://static.politico.com/dims4/default/8a5b708/2147483647/resize/1920x/quality/90/?url=https%3A%2F%2Fstatic.politico.com%2F39%2Fd2%2F783ae66a4ea78cbc44628c3566dd%2Fpolice-officers-whos-next.png)
+```{r pressure, echo=FALSE, fig.cap="A caption", out.width = '100%'}
+knitr::include_graphics(here::here("Data/blm.png"))
+```
+
 ```
 # Table of content 
 
