--- a/Report/Eda2.Rmd
+++ b/Report/Eda2.Rmd
@@ -209,7 +209,7 @@ xlab("Year") + ylab("Percentage")
 
 First of all, despite represent only 13.5 percent of the population, black people represent more than 40 percent of all violent crime in the United States. However, for the past years, the share of black people involved in violent crime is going down except in 2019. 
 
-The share that black people represent in the violent crime could explain why they are over killed compared to their population. In 2016, black people represent 13.3% of the population but 44.2% of violent crime. The ratio is 3.3. On the other side, they represent approximately 25% of people getting shot every year. The ratio in this the case is 1.9.
+The share that black people represent in the violent crime could explain why they are over killed compared to their population. In 2016, black people represent 13.3% of the population but 44.2% of violent crime. The ratio is 3.3. On the other side, they represent approximately 25% of people getting shot every year. The ratio in this the case is 1.9. Black people has 4 time more chance do do violent crime than white people. but as seen before only 3 time more chance than white to get shot by police.
 
 ```{r, echo = FALSE, message = FALSE, warning=FALSE}
 
