--- a/Report/Intro.Rmd
+++ b/Report/Intro.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 options(rgl.useNULL=TRUE) 
 ```
 
-```{r pressure, echo=FALSE, fig.cap="A caption", out.width = '100%'}
+```{r pressure, echo=FALSE, fig.cap="", out.width = '100%'}
 knitr::include_graphics(here::here("Data/blm.png"))
 ```
 
